- Updated Wildrig-v0.20.; added support for 'MTP', 'MTP-TCR' & 'X16rv2' algorithms

#### Pool changes
- Changed property 'MiningCurrency' to 'CurrencySymbol'
- Fixed BlazePool[-Algo/-Coin]; corrected API url
- Fixed Nicehash[Old]; CryptonightV7 does not work in Europe
- Fixed ZergPool; DOGE is now a guaranteed payout currency
- Removed HashRefinery (Pool is shutting down)

#### Balances changes
- Removed HashRefinery (Pool is shutting down)

#### API changes
- Changed version to 0.98
- Added 'filteredminers' & 'inactiveminers'
- Fixed Bminer; recording hashrate for Ethash2GB/3GB was broken (regression from version 3.5.1)
- Fixed FireIce; (regression from https://github.com/MultiPoolMiner/MultiPoolMiner/commit/e9c55d3d708b8ed1588ae00b8e017dfab481d2cd)

#### Web Interface changes
- Added Currency column to pool pages
- Added separate pages for 'Inactive Miners' and 'Filtered Miners'
- Added context menu to 'Inactive Miners'
- Fixed stat management (regression from https://github.com/MultiPoolMiner/MultiPoolMiner/commit/8e6fd3acba279c99ed1d7bce1ed14073e9c37822)

## Changelog Version 3.5.2

#### Core changes
- Backported https://github.com/MultiPoolMiner/MultiPoolMiner/commit/d13e26380346cdd563a7b87c2fcde8277a6e81cd
- Backported https://github.com/MultiPoolMiner/MultiPoolMiner/commit/30b97082155805143a25cd0f61cc60a3972f287d
- Backported https://github.com/MultiPoolMiner/MultiPoolMiner/commit/47d03c63d449db0be37b483644eb7eef574515ed
- Backported https://github.com/MultiPoolMiner/MultiPoolMiner/commit/956dc169ffe5d16724ddac7501d73fd6a86376f6
- Fixed encoding for all .ps1 / .psm1 & .txt files to 'UTF-8 with BOM'

#### Miner changes
- Fixed JCECryptonote-v0.33q; Parameter error, invalid integer value 5--stakjson for argument --variation (https://github.com/MultiPoolMiner/MultiPoolMiner/issues/2375#issuecomment-522341213)
- Changed CcminerNevermore-v0.5; disabled 'Neoscrypt' algorithm, CcminerKlausT-v8.25 is faster