@@ -5,6 +5,7 @@ param(
 )
 
 $Name = Get-Item $MyInvocation.MyCommand.Path | Select-Object -ExpandProperty BaseName
+$Url = "https://miningpoolhub.com/?page=account&action=balances"
 
 if (-not $API_Key) { 
     Write-Log -Level Verbose "Cannot get balance on pool ($Name) - no API key specified. "
@@ -61,6 +62,7 @@ $APIResponse.getuserallbalances.data | Where-Object coin | ForEach-Object {
             Pending     = $_.unconfirmed + $_.ae_confirmed + $_.ae_unconfirmed + $_.exchange
             Total       = $_.confirmed + $_.unconfirmed + $_.ae_confirmed + $_.ae_unconfirmed + $_.exchange
             LastUpdated = (Get-Date).ToUniversalTime()
+            Url         = $Url
         } 
     } 
 } 
